# Visual_Search

./: README.md  main.py  pyproject.toml
src/: embedder.py  indexer.py  prepare_data.py  search.py  store.py
